Fix inverted selection of stable and latest artifacts.

--- a/cbmc-packages.html
+++ b/cbmc-packages.html
@@ -79,8 +79,8 @@
     <ul>
       <li>Download the desired link above to the file DOWNLOAD.zip</li>
       <li>Unzip the download with "unzip DOWNLOAD.zip" to the file cbmc_VERSION_macos.tar.gz</li>
-      <li>Untar the file with "tar fx cbmc_VERSION_macos.tar" to the directory cbmc."</li>
-      <li>Add the diretory cbmc to your PATH.</li>
+      <li>Untar the file with "tar fx cbmc_VERSION_macos.tar" to the directory cbmc.</li>
+      <li>Add the directory cbmc to your PATH.</li>
     </ul>
   <p>
 
@@ -128,7 +128,7 @@
     and the latest version may not be the latest possible commit if GitHub
     has run out of storage to hold more distributions.
     GitHub retains artifacts for only 90 days, and
-    the stable may not be the actual stable release if it has be longer than
+    the stable may not be the actual stable release if it has been longer than
     90 days between releases (it may be a commit to the stable release later
     than the stable release itself).
   </p>
